# mini-valuation-tool

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: devcontainer.json
scripts/: run_app.sh
src/mini_valuation/: app.py  data.py  sensitivities.py  settings.py  valuation.py  viz.py
src/mini_valuation_tool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
