[project]
name = "mini-valuation-tool"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "streamlit",
  "yfinance",
  "pandas",
  "numpy",
  "plotly",
  "pydantic",
  "pydantic-settings",
  "tenacity",
  "loguru",
  "diskcache"
]

[project.optional-dependencies]
dev = ["pytest","ruff","black","mypy","types-requests","ipykernel"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["notebooks"]

[tool.poetry]
packages = [{ include = "mini_valuation", from = "src" }]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
